Fix navbar items not displaying on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -68,14 +68,18 @@ body {
   padding: 8px 16px;
   z-index: 1001;
 }
-
 .navbar__link {
   font-weight: normal;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 150%;
   padding-right: 24px;
 }
 
+@media (max-width: 996px) {
+  .navbar__item {
+    display: block;
+  }
+}
 @media (min-width: 960px) {
   .navbar {
     z-index: 999; /* so announcement bar can overlap it*/
